# django-polls

./: .editorconfig  MANIFEST.in  Makefile  Manifest.in  README.md  makefile  pyproject.toml  setup.cfg
django-polls/mysite/: settings.py
django-polls/polls/: admin.py  models.py
django-polls/polls/templates/polls/: detail.html
django-polls/templates/admin/: base_site.html
mysite/mysite/: settings.py
mysite/polls/: admin.py  models.py  tests.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_rename_published_question_pub_date.py
mysite/polls/templates/polls/: index.html  results.html
