[metadata]
name = django-polls-rednafi
version = 0.1.0
description = This is the canonical `polls` app from the Django tutorial.
long_description = file: README.md
url = https://github.com/rednafi/django-polls
author = Redowan Delowar
author_email = redowan.nafi@gmail.com
license = MIT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2  # Replace "X.Y" as appropriate
    tblib >= 1.7.0

[options.extras_require]
dev_deps =
    black
    flake8
    isort
    twine
    build
